--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ h1 {
 #left-center {
   display: flex;
   align-items: flex-end;
+  align-self: center;
   padding-left: 50px;
 }
 
@@ -123,10 +124,12 @@ h1 {
 
 @media (max-width: 600px) {
   #main {
-    padding: 10px;
-    grid-template-rows: 20% 5% 12% 55%;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    grid-template-rows: 20% 10% 15% 55%;
     grid-template-columns: 100%;
-    gap: 20px;
   }
 
   #left-top {
@@ -171,8 +174,15 @@ h1 {
     grid-column: 1/-1;
     grid-row: 4/5;
     grid-row: 4/5;
-    /* padding-bottom: 10px; */
   }
+
+  #right img {
+    width: 100%;
+    height: 96%;
+    object-fit: cover;
+    position: relative;
+  }
+
   #pricing {
     display: flex;
     justify-content: space-between;
@@ -186,14 +196,6 @@ h1 {
     font-size: 12px;
   }
 
-  #right img {
-    width: 100%;
-    height: 83%;
-    object-fit: cover;
-    object-position: 5% 2%;
-    position: relative;
-  }
-
   #bag {
     height: 125px;
     width: 125px;
@@ -204,7 +206,7 @@ h1 {
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 52%;
-    left: 60%;
+    top: 50%;
+    left: 62%;
   }
 }
